--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,7 @@
     "/assets/admin/plugins/css/admin.css": "/assets/admin/plugins/css/admin.css",
     "/assets/admin/plugins/js/admin.js": "/assets/admin/plugins/js/admin.js",
     "/assets/admin/plugins/css/adminlte.min.css.map": "/assets/admin/plugins/css/adminlte.min.css.map",
-    "/assets/admin/plugins/js/adminlte.min.js.map": "/assets/admin/plugins/js/adminlte.min.js.map"
+    "/assets/admin/plugins/js/adminlte.min.js.map": "/assets/admin/plugins/js/adminlte.min.js.map",
+    "/assets/front/css/front.css": "/assets/front/css/front.css",
+    "/assets/front/js/front.js": "/assets/front/js/front.js"
 }
